--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
+        <img src="assets/img/dylan.jpeg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Dylan Visagie</a></h1>
         <div class="social-links mt-3 text-center">
           <a target="_blank" href="https://www.linkedin.com/in/dylan-visagie-3684b2115/" class="linkedin"><i class="bx bxl-linkedin"></i></a>         
@@ -50,7 +50,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p> I am a qualified registered counselor who is excited to gain new experience in the work world and appreciates the value of learning. I have completed my B.Sc in Physiology and Psychology as well as my Honors in Psychology, allowing me to practice as a registered counselor. In 2021, I left South Africa to teach English in Thailand. This was such a great opportunity for me to broaden my horizon and immerse myself into the Thai culture and more. Now that I am back in South Africa, 
+          <p> I am a qualified registered counselor who is excited to gain new experience in the working world and appreciates the value of learning. I have completed my B.Sc in Physiology and Psychology as well as my Honors in Psychology, allowing me to practice as a registered counselor. In 2021, I left South Africa to teach English in Thailand. This was such a great opportunity for me to broaden my horizon and immerse myself into the Thai culture and more. Now that I am back in South Africa, 
             I am looking to apply my newfound knowledge in mental health and wellness. I have a particular interest in educating youth about mental health. 
             I have previously worked in client services in the medical aid industry, and I have experience working in retail with an emphasis on great customer service. Additionally, I have one year of experience working as a personal trainer and fitness instructor.
           </p>
@@ -58,7 +58,7 @@
 
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
+            <img src="assets/img/dog.jpeg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Registered Counsellor</h3>
@@ -70,13 +70,13 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>2 February 1997</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+27 78 512 5351</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Cape Town, South Africa</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Cape Town/Johannesburg, South Africa</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
 
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Honours</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Honors in Psychology</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>DylanVisagieRC@gmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>HPCSA #:</strong> <span>PRC0040134</span></li>
                 </ul>
@@ -98,22 +98,14 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>
+            I am a passionate individual with a love for holistic healing.
+            One of my goals in life is to make a positive impact by helping others develop, learn, and have a positive influence on future generations.  I thoroughly enjoy the challenge of working with people but also helping them to strive socially. It is my goal to combine my experiences with my ability to be a compassionate, 
+            enthusiastic, and committed registered counsellor who will be part of a positive change in the world.</p>
         </div>
 
         <div class="row">
           <div class="col-lg-6" data-aos="fade-up">
-            <h3 class="resume-title">Sumary</h3>
-            <div class="resume-item pb-0">
-              <h4>Alex Smith</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
-              <ul>
-                <li>Portland par 127,Orlando, FL</li>
-                <li>(123) 456-7891</li>
-                <li>alice.barkley@example.com</li>
-              </ul>
-            </div>
-
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
               <h4>Master of Fine Arts &amp; Graphic Design</h4>
@@ -168,7 +160,7 @@
 
         <div class="row">
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
-            <div class="icon"><i class="bi bis-party"></i></div>
+            <div class="icon"><i class="bi bi-wechat"></i></div>
             <h4 class="title"><a href="">Social</a></h4>
             <p class="description">I am service-minded by nature and enjoy activities that allow me to interact
               with other people. I take other people's feelings and needs into account.
@@ -187,9 +179,9 @@
             <p class="description">I am motivated by the control of processes and procedure. I gain energy from flexibility and being creative. I enjoy interacting with other people and achieving success.</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
-            <div class="icon"><i class="bi bi-bar-chart"></i></div>
+            <div class="icon"><i class="bi bi-sign-stop"></i></div>
             <h4 class="title"><a href="">Assertiveness</a></h4>
-            <p class="description">I have enough self-confidence and assume the things I says are
+            <p class="description">I have enough self-confidence and assume the things I say are
               generally correct. I usually manage to hold on to my opinion and come across as 
               assertive.</p>
           </div>
@@ -203,7 +195,7 @@
           </div>
           
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
-            <div class="icon"><i class="bi bi-stress"></i></div>
+            <div class="icon"><i class="bi bi-bar-chart"></i></div>
             <h4 class="title"><a href="">Stress resistance</a></h4>
             <p class="description">When I feel pressured, I probably won't take it to heart. I generally don't experience a lot
               of stress. I feel I am usually able to resolve problems and difficult
