--- a/index.html
+++ b/index.html
@@ -95,7 +95,6 @@
     <!-- ======= Resume Section ======= -->
     <section id="resume" class="resume">
       <div class="container">
-
         <div class="section-title">
           <h2>Resume</h2>
           <p>
@@ -103,46 +102,112 @@
             One of my goals in life is to make a positive impact by helping others develop, learn, and have a positive influence on future generations.  I thoroughly enjoy the challenge of working with people but also helping them to strive socially. It is my goal to combine my experiences with my ability to be a compassionate, 
             enthusiastic, and committed registered counsellor who will be part of a positive change in the world.</p>
         </div>
-
         <div class="row">
           <div class="col-lg-6" data-aos="fade-up">
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Master of Fine Arts &amp; Graphic Design</h4>
-              <h5>2015 - 2016</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+              <h4>Registered Counsellor</h4>
+              <h5>2022</h5>
+              <p><em>Health Professions Council of South Africa</em></p>
+              <p></p>
             </div>
             <div class="resume-item">
-              <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-              <h5>2010 - 2014</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+              <h4>TESOL/TESL/TEFL Certification (120 hours)</h4>
+              <h5>2020</h5>
+              <p><em>TEFL, South Africa</em></p>
+              <p></p>
+            </div>
+            <div class="resume-item">
+              <h4>Bachelor of Psychology Honours (BPsych equivalent)</h4>
+              <h5>2019 - 2020</h5>
+              <p><em>South African College of Applied Psychology</em></p>
+              <p></p>
+            </div>
+            <div class="resume-item">
+              <h4>National Certificate in Fitness</h4>
+              <h5>2018</h5>
+              <p><em>Health and Fitness Professional Association</em></p>
+              <p></p>
+            </div>
+            <div class="resume-item">
+              <h4>Bachelor of Health Science</h4>
+              <h5>2015 - 2018</h5>
+              <p><em>North West University</em></p>
+              <p></p>
             </div>
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
-              <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
+              <h4>English Teacher</h4>
+              <h5>2023</h5>
+              <p><em>EF Kids and Teens, Indonesia</em></p>
               <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+                <li>Teacher training, observations and team teaching.</li>
+                <li>Creating lesson plans, activities and following an online guide for lessons.</li>
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
+              <h4>Research Consultant</h4>
+              <h5>2023</h5>
+              <p><em>LRMG, Johannesburg</em></p>
               <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+                <li>Researching companies using various search engines such as LinkedIn.</li>
+                <li>Telephonic and communicative skills required while contacting the companies.</li>
               </ul>
+            </div>
+            <div class="resume-item">
+              <h4>English Teacher</h4>
+              <h5>2022 - 2023</h5>
+              <p><em>Siam Computer and Language School, Thailand</em></p>
+              <ul>
+                <li>Teaching English functions, grammar, pronunciation, vocabulary and writing skills.</li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>English Teacher</h4>
+              <h5>2021 - 2022</h5>
+              <p><em>Buransuekasa School, Thailand</em></p>
+              <ul>
+                <li>Teaching English functions, grammar, pronunciation, vocabulary and writing skills.</li>
+                <li>Creating lesson plans and Powerpoint slides as well as termly assessments.</li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Sales Assistant</h4>
+              <h5>2019 - 2021</h5>
+              <p><em>Cape Union Mart, Johannesburg</em></p>
+              <ul>
+                <li>Sales of technical gear and leisure wear to customers in retail.</li>
+                <li>Meeting key performance indicators and targets for the company.</li>
+                <li>Store and stock merchandising.</li>
+                <li>Point of service sales.</li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Client Services</h4>
+              <h5>2018 - 2019</h5>
+              <p><em>PPS Healthcare administration, Centurion</em></p>
+              <ul>
+                <li>Client services relating to general medical aid queries.</li>
+                <li>Interacting with various service providers and back-office processes.</li>
+                <li>Telephonic communication as main point of interaction.</li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-lg-6" data-aos="fade-up">
+            <h3 class="resume-title">Volunteering</h3>
+            <div class="resume-item">
+              <h4>Practical Experience in counselling</h4>
+              <h5>2019 - 2020</h5>
+              <p><em>theanimationschool.co.za, Johannesburg South Africa</em></p>
+              <p>720 hours of practical activities including engagement at practicum site, theoretical research and case notes, attending workshops, working on the portfolio of evidence and psychometric assessments</p>
+            </div>
+            <div class="resume-item">
+              <h4>Telephonic counselling</h4>
+              <h5>2019 - 2020</h5>
+              <p><em>www.lifelinejhb.org.za, Johannesburg, South Africa</em></p>
+              <p>Learned about counselling processes, the person-centered philosophy and interpersonal communication skills and techniques </p>
             </div>
           </div>
         </div>
@@ -228,58 +293,6 @@
                 <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
                 <h3>Saul Goodman</h3>
                 <h4>Ceo &amp; Founder</h4>
-              </div>
-            </div><!-- End testimonial item -->
-
-            <div class="swiper-slide">
-              <div class="testimonial-item" data-aos="fade-up" data-aos-delay="100">
-                <p>
-                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
-                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                </p>
-                <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-                <h3>Sara Wilsson</h3>
-                <h4>Designer</h4>
-              </div>
-            </div><!-- End testimonial item -->
-
-            <div class="swiper-slide">
-              <div class="testimonial-item" data-aos="fade-up" data-aos-delay="200">
-                <p>
-                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
-                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                </p>
-                <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-                <h3>Jena Karlis</h3>
-                <h4>Store Owner</h4>
-              </div>
-            </div><!-- End testimonial item -->
-
-            <div class="swiper-slide">
-              <div class="testimonial-item" data-aos="fade-up" data-aos-delay="300">
-                <p>
-                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
-                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                </p>
-                <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
-                <h3>Matt Brandon</h3>
-                <h4>Freelancer</h4>
-              </div>
-            </div><!-- End testimonial item -->
-
-            <div class="swiper-slide">
-              <div class="testimonial-item" data-aos="fade-up" data-aos-delay="400">
-                <p>
-                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
-                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                </p>
-                <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
-                <h3>John Larson</h3>
-                <h4>Entrepreneur</h4>
               </div>
             </div><!-- End testimonial item -->
 
