--- a/index.html
+++ b/index.html
@@ -50,9 +50,8 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p> I am a qualified registered counselor who is excited to gain new experience in the working world and appreciates the value of learning. I have completed my B.Sc in Physiology and Psychology as well as my Honors in Psychology, allowing me to practice as a registered counselor. In 2021, I left South Africa to teach English in Thailand. This was such a great opportunity for me to broaden my horizon and immerse myself into the Thai culture and more. Now that I am back in South Africa, 
-            I am looking to apply my newfound knowledge in mental health and wellness. I have a particular interest in educating youth about mental health. 
-            I have previously worked in client services in the medical aid industry, and I have experience working in retail with an emphasis on great customer service. Additionally, I have one year of experience working as a personal trainer and fitness instructor.
+          <p> I'm a registered counsellor with a B.Sc. in Physiology and Psychology and an Honours in Psychology. My journey has been shaped by a deep interest in mental wellness and a commitment to real-world support. In 2021, I moved to Thailand to teach English—a life-changing experience that opened my eyes to new ways of living and connecting with others. The transition back to South Africa came with its own challenges, including job uncertainty and visa limitations, but it strengthened my resilience and broadened my perspective.
+            I’ve worked in client services, retail, and as a personal trainer—roles that have helped me develop strong people skills and a heart for service. I’m especially passionate about youth education and creating safe, accessible spaces for others to grow and thrive, wherever they are in life.
           </p>
         </div>
 
@@ -83,8 +82,7 @@
               </div>
             </div>
             <p>
-              I am resilient, innovative and deliver quality work. I keep a positive mental attitude. I believe in helping others and a sense of humor is vital.
-              I believe it is important to have both a healthy mind and body. My generation says "Ah! We move" No matter the obstacles before us we strive to meet our goals. We move towards a success mindset!
+              Drawing from both personal and professional experience, I understand the pressures of modern work environments. I see a growing opportunity to embed mental wellness into daily life—whether in homes, workplaces, or communities. By providing accessible support such as wellness check-ins, psychoeducation, and resilience-building, I help people create environments that are truly conducive to thriving.
             </p>
           </div>
         </div>
@@ -98,9 +96,9 @@
         <div class="section-title">
           <h2>Resume</h2>
           <p>
-            I am a passionate individual with a love for holistic healing.
-            One of my goals in life is to make a positive impact by helping others develop, learn, and have a positive influence on future generations.  I thoroughly enjoy the challenge of working with people but also helping them to strive socially. It is my goal to combine my experiences with my ability to be a compassionate, 
-            enthusiastic, and committed registered counsellor who will be part of a positive change in the world.</p>
+            I am a compassionate, purpose-driven registered counsellor with a passion for holistic healing and person-centered care. My mission is to create environments—whether at home, in the community, or in the workplace—that support mental and emotional well-being. I bring a unique blend of practical experience, empathy, and enthusiasm to my work, helping individuals grow, learn, and connect meaningfully with others.
+            With a growing focus on accessible mental health support, I aim to partner with organizations to deliver tailored interventions such as wellness check-ins, psychoeducation, and group sessions that promote resilience and foster a culture of care.
+          </p>
         </div>
         <div class="row">
           <div class="col-lg-6" data-aos="fade-up">
@@ -226,22 +224,18 @@
         <div class="row">
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
             <div class="icon"><i class="bi bi-wechat"></i></div>
-            <h4 class="title"><a href="">Social</a></h4>
-            <p class="description">I am service-minded by nature and enjoy activities that allow me to interact
-              with other people. I take other people's feelings and needs into account.
-              Communication and consideration for others come first for me.</p>
+            <h4 class="title"><a href="">Social  Awareness</a></h4>
+            <p class="description">I naturally enjoy connecting with others and find fulfillment in creating supportive, respectful interactions. I value open communication and empathy in every setting.</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
             <div class="icon"><i class="bi bi-card-checklist"></i></div>
-            <h4 class="title"><a href="">Intellectual </a></h4>
-            <p class="description">I prefer to work with ideas, to go deeply into things, and examine
-              problems in detail before forming an opinion. I find it fascinating to analyse how
-              things work, and enjoy acquiring new knowledge.</p>
+            <h4 class="title"><a href="">Curiosity & Learning</a></h4>
+            <p class="description">I’m drawn to understanding how things work and enjoy diving deeper into new ideas. Learning and reflection are a regular part of how I grow both personally and professionally.</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
             <div class="icon"><i class="bi bi-brightness-high"></i></div>
-            <h4 class="title"><a href="">Motivation </a></h4>
-            <p class="description">I am motivated by the control of processes and procedure. I gain energy from flexibility and being creative. I enjoy interacting with other people and achieving success.</p>
+            <h4 class="title"><a href="">Motivation & Drive</a></h4>
+            <p class="description">I’m energized by meaningful work, especially when it involves collaboration, creativity, and clear processes. Success, for me, is about making a difference in ways that are well thought out and impactful.</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
             <div class="icon"><i class="bi bi-sign-stop"></i></div>
@@ -252,22 +246,15 @@
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
             <div class="icon"><i class="bi bi-binoculars"></i></div>
-            <h4 class="title"><a href="">Planning</a></h4>
-            <p class="description">I generally consider things thoroughly before starting something new,
-              giving me time to be able to deal with matters in a methodical manner. As I like
-              things to be organised carefully and effectively. I consider making clear agreements, and meeting
-              them necessary, and will strongly emphasise this in the planning process.</p>
+            <h4 class="title"><a href="">Structure & Planning</a></h4>
+            <p class="description">I prefer organized, methodical approaches. Clear expectations and thoughtful planning help me contribute with reliability and consistency.</p>
           </div>
-          
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
             <div class="icon"><i class="bi bi-bar-chart"></i></div>
-            <h4 class="title"><a href="">Stress resistance</a></h4>
-            <p class="description">When I feel pressured, I probably won't take it to heart. I generally don't experience a lot
-              of stress. I feel I am usually able to resolve problems and difficult
-              situations myself.</p>
+            <h4 class="title"><a href="">Calm Under Pressure</a></h4>
+            <p class="description">I generally remain steady under stress, trusting my ability to navigate challenges and resolve difficulties with patience and perspective.</p>
           </div>
         </div>
-
       </div>
     </section><!-- End Services Section -->
   </main><!-- End #main -->
